# react-native-quick-crypto

./: .clang-format  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.json  .rules  AGENTS.md  Bitstamp_PGP_Key.1339a6f4e03973465a35f44007fb76305d7acd83.txt.webarchive  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  Data transfer frameworks – Privacy & Terms – Google.webarchive  JSICryptoHostObject.plist  LICENSE  README.md  bun.lockb  bunfig.toml  defaults.cfg  eslint.config.js  eslint.config.mjs  implementation-coverage.md  microsoft.html  node_tester.js  package.json  prettier.config.js  prettier.config.mjs  react-native-fast-crypto.podspec  react-native-jsi-crypto.podspec  react-native-quick-crypto.podspec  react-native.config.js  tsconfig.json  wallet.data
.agents/agents/: orchestrator.md
.agents/commands/: address-pr-feedback.md  commit.md  pr.md  review.md
.agents/rules/: .gitignore  architecture.md  ci-caching.md  code-cpp.md  code-cpp.xml  code-typescript.md  crypto-security.md  crypto-security.xml  git-safety.md  test-verification.md  test-verification.xml
.claude/agents/: app-debug-specialist.md  cpp-specialist.md  crypto-specialist.md  orchestrator.md  testing-specialist.md  typescript-specialist.md
.claude/commands/: commit.md  pr.md  review.md
.claude/plans/: issue-881-openssl-conflict.md  quick-wins.md
.claude/rules/: .gitignore  architecture.xml  ci-caching.xml  code-cpp.xml  code-typescript.xml  git-safety.xml  test-verification.xml
.docs/: implementation-coverage.md  troubleshooting.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  BUILD_ERROR.yml  FEATURE_REQUEST.yml  QUESTION.yml  config.yml
.github/workflows/: build-android.yml  build-ios.yml  deploy-docs.yml  e2e-android-test.yml  e2e-ios-test.yml  notice-yarn-changes.yml  release-github.yml  release-npm.yml  release-publish.yml  release.yml  update-lockfiles.yml  validate-android.yml  validate-cpp.yml  validate-js.yml
.husky/: pre-commit
.llm-rules/: local.md  typescript.md
.windsurf/rules/: cpp.md  local.md  project.md  typescript.md
.zed/: settings.json
FabricExample/: babel.config.js  index.js  package.json
QuickCryptoExample/: App.tsx  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
QuickCryptoExample/android/: settings.gradle
QuickCryptoExample/ios/: Podfile
QuickCryptoExample/src/: App.tsx
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/dummy/: CMakeLists.txt
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/quickcrypto/: QuickCryptoModule.java  QuickCryptoPackage.java
android/src/main/java/com/reactnativefastcrypto/: FastCryptoModule.java  FastCryptoPackage.java
android/src/main/java/com/reactnativejsicrypto/: JSICryptoModule.java  JSICryptoPackage.java
android/src/main/java/com/reactnativequickcrypto/: QuickCryptoModule.java  QuickCryptoPackage.java
cpp/: FastCryptoHostObject.cpp  FastCryptoHostObject.h  JSICryptoHostObject.cpp  JSICryptoHostObject.h  MGLFastCryptoHostObject.cpp  MGLFastCryptoHostObject.h  MGLKeys.cpp  MGLKeys.h  MGLQuickCryptoHostObject.cpp  MGLQuickCryptoHostObject.h  RNTQuickCryptoCxx.cpp  RNTQuickCryptoCxx.h  react-native-fast-crypto.cpp
cpp/Cipher/: CipherHostObject.cpp  CipherHostObject.h  CipherInstaller.cpp  CipherInstaller.h  CreateCipherInstaller.cpp  CreateCipherInstaller.h  CreateDecipherInstaller.cpp  CreateDecipherInstaller.h  MGLCipherHostObject.cpp  MGLCipherHostObject.h  MGLCipherKeys.cpp  MGLCipherKeys.h  MGLCreateCipherInstaller.cpp  MGLCreateCipherInstaller.h  MGLCreateDecipherInstaller.cpp  MGLCreateDecipherInstaller.h  MGLGenerateKeyPairInstaller.cpp  MGLGenerateKeyPairInstaller.h  MGLGenerateKeyPairSyncInstaller.cpp  MGLGenerateKeyPairSyncInstaller.h  MGLPrivateDecryptInstaller.cpp  MGLPrivateDecryptInstaller.h  MGLPublicCipher.cpp  MGLPublicCipher.h  MGLPublicCipherInstaller.h  MGLPublicEncryptInstaller.cpp  MGLPublicEncryptInstaller.h  MGLRsa.cpp  MGLRsa.h  MGLX25519.cpp  MGLX25519.h
cpp/HMAC/: HMAC-JSI-Installer.cpp  HMAC-JSI-Installer.h  HmacHostObject.cpp  HmacHostObject.h  HmacInstaller.cpp  HmacInstaller.h  MGLHmacHostObject.cpp  MGLHmacHostObject.h  MGLHmacInstaller.cpp  MGLHmacInstaller.h
cpp/Hash/: HashHostObject.cpp  HashHostObject.h  HashInstaller.cpp  HashInstaller.h  MGLHashHostObject.cpp  MGLHashHostObject.h  MGLHashInstaller.cpp  MGLHashInstaller.h
cpp/JSI Utils/: JSIMacros.h  MGLSmartHostObject.cpp  MGLSmartHostObject.h  MGLThreadAwareHostObject.h  SmartHostObject.cpp  SmartHostObject.h  ThreadAwareHostObject.cpp  ThreadAwareHostObject.h  TypedArray.cpp  TypedArray.h
cpp/JSIUtils/: MGLJSIMacros.h  MGLJSIUtils.h  MGLSmartHostObject.h  MGLThreadAwareHostObject.h  MGLTypedArray.cpp  (+1 more)
docs/: VERSION-1.0.0.md  VERSION_1.0.0_TODO.md  font_css.css  implementation-coverage.md  ios-setup.md  mdx-components.tsx  next.config.mjs  package.json  source.config.ts  tsconfig.json
example/: .eslintrc.js  .gitignore  Gemfile  app.json  babel.config.cjs  babel.config.js  bun.lockb  eslint.config.js  eslint.config.mjs  index.js  index.ts  index.tsx  jest.config.js  metro.config.cjs  metro.config.js  package-lock.json  package.json  prettier.config.js  react-native.config.js  tsconfig.json
ios/: FastCrypto.h  FastCrypto.mm  FastCryptoModule.h  FastCryptoModule.mm  JSICryptoModule.h  JSICryptoModule.mm  QuickCryptoModule.mm
patches/: react-native-fast-encoder@0.1.12.patch  react-native-nitro-modules@0.21.0.patch  react-native-screens@3.32.0.patch  react-native-screens@3.34.0.patch  react-native@0.72.7.patch
scripts/: clang-format.sh  flatten-nitro-headers.sh  preinstall.sh  prepare-release.sh  release.sh  setup_clang_env.sh
src/: Cipher.ts  FastCrypto.ts  Hash.ts  Hashnames.ts  Hmac.ts  JSICrypto.ts  NativeFastCrypto.ts  NativeQuickCryptoCxx.ts  QuickCrypto.ts  Utils.ts  aes.ts  constants.ts  ec.ts  index.ts  index.tsx  keygen.ts  keys.ts  pbkdf2.ts  random.ts  rsa.ts  sig.ts  subtle.ts
test/: hashnames.test.ts
(+421 files in other folders)
